# formdb-debugger

./: AGENTIC.scm  CHANGELOG.md  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  README.adoc  STATE.scm  docker-compose.yml
adapters/: Cargo.toml
adapters/cli/: Cargo.toml
adapters/cli/src/: main.rs
adapters/formdb/: Cargo.toml
adapters/postgres/: Cargo.toml
adapters/postgres/src/: lib.rs
core/: FormBDDebugger.lean  lakefile.lean
core/FormBDDebugger/Proofs/: FDPreserving.lean  Lossless.lean  Rollback.lean
core/FormBDDebugger/State/: Delta.lean  Snapshot.lean  Transaction.lean
core/FormBDDebugger/Types/: Constraint.lean  Query.lean  Schema.lean
idris/src/REPL/: Core.idr
ui/: Cargo.toml
ui/src/: app.rs  main.rs  proofs.rs
