# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "formbd-debugger-postgres"
description = "PostgreSQL adapter for FormBD Debugger"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio-postgres = "0.7"
chrono = { version = "0.4", features = ["serde"] }
